# oop_klinika_zadatak

./: CMakeLists.txt  Datum.cpp  Datum.h  Doktor.cpp  Doktor.h  Klinika.cpp  Klinika.dev  Klinika.h  Klinika.layout  Osoba.cpp  Osoba.h  Pacijent.cpp  Pacijent.h  Racun.cpp  Racun.h  Recepcija.cpp  Recepcija.h  Recepcija.h.gch  Sex.cpp  Sex.h  Specijalizacija.cpp  Specijalizacija.h  Status_termina.cpp  Status_termina.h  Termin.cpp  Termin.h  Usluga.cpp  Usluga.h  Vremenska_oznaka.cpp  Vremenska_oznaka.h  main.cpp
